# labanalysis

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  pyproject.toml  pytest.ini  readme.md  requirements.txt  test_with_vs_env.ps1
.claude/: settings.json  settings.local.json
docs/: CPU_OPTIMIZATION_GUIDE.md  MULTI_OUTPUT_LOSS_DESIGN.md  README.md  TESTING_GUIDE.md  TORCHTRAINER_CHANGELOG.md  TORCHTRAINER_EXAMPLES.md  V2_SUMMARY.md  WINDOWS_COMPILER_SETUP.md  index.html  labanalysis.html  search.js
docs/advanced/: custom-signals.md  extending-protocols.md  parallel-processing.md  unit-handling.md
docs/api/: README.md  constants.md  exercises.md  messages.md  pipelines.md  plotting.md  referenceframes.md  signalprocessing.md  utils.md
docs/api-reference/: README.md  plotting.md  signalprocessing.md
docs/development/: architecture.md  code-style.md  testing.md
docs/examples/: README.md
docs/getting-started/: core-concepts.md  first-analysis.md  installation.md  quick-start.md
docs/guides/: README.md  contributing.md
docs/labanalysis/: ___init__.html  constants.html  equations.html  frames.html  io.html  messages.html  pipelines.html  plotting.html  regression.html  signalprocessing.html  testprotocols.html  utils.html
docs/references/: README.md  biomechanics.md  equations.md  file-formats.md
docs/troubleshooting/: README.md
docs/tutorials/: 01-jump-analysis.md  02-gait-analysis.md  03-full-body-kinematics.md  04-strength-assessment.md  05-signal-processing.md  06-custom-protocol.md  07-batch-processing.md  08-ml-modeling.md  09-custom-reference-frames.md  README.md
labanalysis/: ___init__.py  __init__.py  pipelines.py  signalprocessing.py
labanalysis/equations/: __init__.py  cardio.py  strength.py
labanalysis/frames/: __init__.py
labanalysis/io/: __init__.py
labanalysis/modelling/: __init__.py
labanalysis/pipelines/: __init__.py
labanalysis/plotting/: __init__.py  plotly.py
labanalysis/records/: __init__.py  biostrength.py  bodies.py  timeseries.py
labanalysis/regression/: __init__.py
labanalysis/testprotocols/: __init__.py  balance.py  balancetests.py  jumptests.py  protocols.py
src/: ___init__.py  constants.py  messages.py  utils.py
src/equations/: __init__.py
src/frames/: __init__.py
src/labanalysis/: __init__.py  constants.py  messages.py  signalprocessing.py  utils.py
src/pipelines/: __init__.py  processingpipeline.py
test/: BUGFIX_SUMMARY_EMGSignal_copy.md  README.md  __init__.py  conftest.py  run_signalprocessing_tests.py  test_agility.py  test_balance.py  test_bodies.py  test_compiler_detection.py  test_constants.py  test_jumps.py  test_messages.py  test_plotting_plotly.py  test_pytorch_modules.py  test_pytorch_utils.py  test_regression_models.py  test_runningexercise.py  test_signalprocessing.py  test_strengthtests.py  test_torch_compile_check.py  test_vo2max.py  validate_utils_basic.py  validate_v2_changes.py
test/equations/: __init__.py  test_cardio.py  test_strength.py
test/exercises/: __init__.py  conftest.py  test_change_of_direction.py  test_drop_jump.py  test_prone_posture.py  (+3 more)
(+787 files in other folders)
