[build-system]
requires = [
    "etuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "labanalysis"
authors = [{ name="Luca Zoffoli", email="lzoffoli@technogym.com" }]
description = "A small package to simplify data processing in python."
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "92"
dynamic = ["readme", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {
    "scikit-learn",
    "plotly",
    "pandas",
    "openpyxl",
    "pint",
    "torch",
    "git+https://github.com/lzoffoli-tg/onnxmodels.git",
}
readme = {file = "README.md"}

[project.urls]
"Homepage" = "https://github.com/ZofTG/labanalysis"
"Bug Tracker" = "https://github.com/ZofTG/labanalysis/issues"
