[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "labanalysis"
version = "155"
description = "A small package to simplify data processing in python."
authors = [{ name = "Luca Zoffoli", email = "lzoffoli@technogym.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "scikit-learn",
    "plotly",
    "pandas",
    "openpyxl",
    "pint",
    "torch",
    "onnxmodels @ git+https://github.com/lzoffoli-tg/onnxmodels.git"
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/lzoffoli-tg/labanalysis"
"Bug Tracker" = "https://github.com/lzoffoli-tg/labanalysis/issues"
