[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "labanalysis"
version = "225"
description = "A small package to simplify data processing in python."
authors = [{ name = "Luca Zoffoli", email = "lzoffoli@technogym.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "scikit-learn",
    "plotly",
    "pandas",
    "openpyxl",
    "pint",
    "torch",
    "onnxmodels @ git+https://github.com/lzoffoli-tg/onnxmodels.git",
    "biostrengthdataconverter @ git+ssh://git@github.com/lzoffoli-tg/biostrengthdataconverter.git"
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/lzoffoli-tg/labanalysis"
"Bug Tracker" = "https://github.com/lzoffoli-tg/labanalysis/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools]
# Include only src directory in distribution (exclude test, docs, etc.)
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
# Optionally include specific file patterns if needed
"*" = ["*.txt", "*.md"]
